# fip-rank

./: Cargo.toml  README.md  rank.csv  rank_full-UTF-8.txt  rank_male_230522.txt  rank_male_231106.txt
src/: cli.rs  lib.rs  main.rs
