[package]
name = "fip-rank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
csv = "1.2.2"
dialoguer = "0.10.4"
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
tabled = "0.14.0"
[lints.clippy]
pedantic = "warn"
nursery = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
uninlined_format_args = "allow"
