[package]
name = "fip-rank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
csv = "1.3.0"
dialoguer = "0.11.0"
itertools = "0.12.0"
serde = { version = "1.0.195", features = ["derive"] }
tabled = "0.15.0"
[lints.rust]
keyword_idents = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unused_qualifications = "warn"
unused_tuple_struct_fields = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = "warn"
# cargo = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
uninlined_format_args = "allow"
